
<package>
  <name>ros_test</name>
  <description>
     This package test ROS features.
  </description>
  <version>0.1.0</version>
  <maintainer email="jon.binney@gmail.com">Enrique Fernández</maintainer>
  <author>Enrique Fernández</author>
  <license>GPL v3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>roscpp</run_depend>

</package>
